update swagger & first incremental summarization impl
